# vectors

./: .gitignore  AGENTS.md  BENCHMARKS.md  README.md  pyproject.toml
notebooks/: 01_pq_walkthrough.ipynb  02_rabitq_walkthrough.ipynb  03_comparison.ipynb
scripts/: download_datasets.py  run_benchmark.py
src/datasets/: loader.py  utils.py
src/evaluation/: benchmark.py  metrics.py  plotting.py
src/quantizers/: base.py  pq.py  rabitq.py  reranked.py
src/search/: exhaustive.py
src/utils/: binary.py  math.py  timer.py
tests/: test_datasets.py  test_metrics.py  test_pq.py  test_rabitq.py  test_reranked.py  test_utils.py
