[project]
name = "vectors"
version = "0.1.0"
description = "Educational comparison of PQ and RaBitQ for Approximate Nearest Neighbor search"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "h5py>=3.8",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.65",
    "psutil>=5.9",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
